# llmsherpa-pdf-reader

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: alembic.ini  database.py  main.py
app/migrations/: env.py
app/migrations/versions/: ce692f44ad60_create_tables.py  cf3e2145e952_add_pgroonga_index_to_pages_content.py
app/model/: book.py  page.py  timestamp_mixin.py
app/templates/: index.html  page_detail.html  search_results.html  sections.html
dockerfiles/db/: Dockerfile
scripts/: init-db.sh
sql/: 001_create_table.sql
src/: main.py
src/llmsherpa_pdf_reader/: main.py
templates/: index.html
