[project]
name = "llmsherpa-pdf-reader"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kou12345", email = "hi.0412.ko.2002@gmail.com" }
]
dependencies = [
    "llmsherpa>=0.1.4",
    "fastapi[standard]>=0.112.2",
    "supabase>=2.7.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llmsherpa_pdf_reader"]
